# async-kartoffel

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  nvim-rust-analyzer-nested.lua
.cargo/: config.toml
crates/async-algorithm/: Cargo.toml
crates/async-algorithm/src/: chunk_map.rs  error.rs  exploration.rs  lib.rs  map.rs  math.rs  measure.rs  navigation.rs  stats.rs  terrain.rs
crates/async-algorithm/src/chunk_map/: hash.rs  mod.rs
crates/async-kartoffel/: Cargo.toml
crates/async-kartoffel-generic/: Cargo.toml
crates/async-kartoffel-generic/src/: clock.rs  lib.rs  radar.rs
crates/async-kartoffel-generic/src/world/: mod.rs  position.rs  transform.rs
crates/async-kartoffel/src/: clock.rs  critical_section_impl.rs  lib.rs
crates/async-kartoffel/src/bot/: compass.rs  error.rs  mod.rs  motor.rs  radar.rs
crates/async-kartoffel/src/world/: mod.rs  position.rs  tile.rs  vec2.rs
crates/kartoffel-gps/: Cargo.toml
crates/kartoffel-gps-builder/: Cargo.toml
crates/kartoffel-gps-builder/src/: beacon_nav.rs  const_global_pos.rs  const_graph.rs  const_vec2.rs  graph.rs  lib.rs  map.rs
crates/kartoffel-gps/src/: beacon.rs  const_graph.rs  gps.rs  lib.rs  map.rs  pos.rs
crates/test-kartoffel/src/: lib.rs
cross/: Cargo.toml  build.rs
cross/.cargo/: config.toml
cross/crates/async-kartoffel/: Cargo.toml
cross/crates/async-kartoffel/src/: clock.rs  lib.rs
cross/crates/async-kartoffel/src/bot/: compass.rs  mod.rs  motor.rs
cross/crates/test-kartoffel/: Cargo.toml
cross/src/: lib.rs
examples/: bench_navigation.rs  challenge-roomba.rs  tutorial_line.rs  tutorial_stab.rs  tutorial_straight.rs
maps/: map-grotta.txt  map-med.txt  map-roomba.txt  map-test.txt
maps/grotta/: map.txt
maps/grotta/incomplete/: grotta1.txt  grotta2.txt  grotta3.txt  grotta4.txt
maps/sandbox-tiny/: map.txt
src/: arm.rs  clock.rs  compass.rs  critical_section_impl.rs  lib.rs  mem.rs  motor.rs  radar.rs  serial.rs
src/algorithm/: breakpoint.rs  chunk_map.rs  error.rs  exploration.rs  map.rs  measure.rs  mod.rs  navigation.rs  stats.rs  terrain.rs
src/bot/: arm.rs  compass.rs  mod.rs  motor.rs  radar.rs
src/world/: direction.rs  distance.rs  mod.rs  position.rs  tile.rs
