[workspace]

resolver = "2"
members = [
	"crates/async-algorithm",
	"crates/kartoffel-gps",
	"crates/kartoffel-gps-builder",
	"crates/async-kartoffel-generic",
]

[workspace.package]
edition = "2024"
version = "0.7.1"

[workspace.dependencies]
heapless = "0.8.0"
embassy-futures = "0.1.1"
static_cell = "2.1.0"
phf = { version = "0.11.3", default-features = false }
phf_codegen = {version = "0.11.3", default-features = false }
phf_shared = {version = "0.11.3", default-features = false }
anyhow = {version = "1.0.96", default-features = false}
ndarray = {version = "0.16.1", default-features = false }
ndarray-stats = {version = "0.6.0", default-features = false}
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }

