[workspace]
resolver = "2"
members = [
	"crates/async-algorithm",
	"crates/kartoffel-gps",
	"crates/kartoffel-gps-builder",
	"crates/async-kartoffel-generic",
]

[workspace.package]
edition = "2024"
version = "0.7.1"

[workspace.dependencies]
async-kartoffel-generic = {path = "crates/async-kartoffel-generic"}
async-algorithm = {path = "crates/async-algorithm"}
kartoffel-gps = {path = "crates/kartoffel-gps"}
heapless = "0.8.0"
embassy-futures = "0.1.1"
phf_shared = {version = "0.11.3", default-features = false }
anyhow = {version = "1.0.96", default-features = false}
ndarray = {version = "0.16.1", default-features = false }
ndarray-stats = {version = "0.6.0", default-features = false}
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
