[workspace]
resolver = "2"
members = [
	"crates/async-kartoffel",
	"crates/test-kartoffel",
]

[workspace.package]
edition = "2024"
version = "0.7.1"

[workspace.dependencies]
async-kartoffel = {path = "crates/async-kartoffel", default-features = false}
test-kartoffel = {path = "crates/test-kartoffel"}
async-kartoffel-generic = {path = "../crates/async-kartoffel-generic"}
async-algorithm = {path = "../crates/async-algorithm"}
kartoffel-gps = {path = "../crates/kartoffel-gps"}
kartoffel-gps-builder = {path = "../crates/kartoffel-gps-builder"}
kartoffel = { git = "https://github.com/Patryk27/kartoffels", default-features = false }
critical-section = "1.2.0"
heapless = "0.8.0"
embassy-futures = "0.1.1"
embassy-executor = { version = "0.6.3", features = ["arch-spin", "executor-thread"] }
static_cell = "2.1.0"
embassy-sync = "0.6.2"
phf = { version = "0.11.3", default-features = false }
phf_codegen = {version = "0.11.3", default-features = false }
anyhow = {version = "1.0.96", default-features = false}
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.release.build-override]
# for faster graph analyzation
opt-level = 3

[profile.dev.build-override]
# for faster graph analyzation
opt-level = 3

[package]
name = "example-kartoffels"
version.workspace = true
edition.workspace = true

[dependencies]
heapless.workspace = true
embassy-futures.workspace = true
async-kartoffel = {workspace = true, default-features = true}
test-kartoffel.workspace = true
async-kartoffel-generic.workspace = true
async-algorithm.workspace = true
kartoffel-gps.workspace = true
embassy-executor.workspace = true
static_cell.workspace = true
embassy-sync.workspace = true
phf.workspace = true
rand.workspace = true

[build-dependencies]
phf.workspace = true
phf_codegen.workspace = true
kartoffel-gps.workspace = true
async-kartoffel-generic.workspace = true
kartoffel-gps-builder.workspace = true

[lib]
test = false

[[bin]]
name = "tutorial-stab"
test = false
bench = false
