[package]
name = "async-algorithm"
version.workspace = true
edition.workspace = true

[dependencies]
heapless.workspace = true
embassy-futures.workspace = true
async-kartoffel = {path = "../../crates/async-kartoffel", default-features = false}
test-kartoffel = {path = "../../crates/test-kartoffel", optional = true}

[features]
default = ["test-kartoffel"]
