[package]
name = "kartoffel-gps-builder"
version.workspace = true
edition.workspace = true

[dependencies]
kartoffel-gps.workspace = true
async-kartoffel-generic.workspace = true
anyhow = {workspace = true, default-features = true}
ndarray = {workspace = true, default-features = true}
ndarray-stats = {workspace = true, default-features = true}
phf_shared = {workspace = true, default-features = true}
