[package]
name = "kartoffel-gps"
version.workspace = true
edition.workspace = true

[dependencies]
async-kartoffel-generic = {path = "../../crates/async-kartoffel-generic"}
async-algorithm = {path = "../../crates/async-algorithm"}
phf_shared.workspace = true
heapless.workspace = true
rand.workspace = true
